jvm: reduce heap size to 500m, more aggressive gc and opts